--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,13 @@
     "require": {
         "php": ">=5.3.0",
 		"magento/ce": "1.8.1.0",
-		"aoepeople/composer-installers": "dev-master"
+		"riconeitzel/german-localepack-de-de": "dev-preview",
+		"firegento/magesetup": "dev-master",
+		"aoepeople/composer-installers": "dev-master",
+		"avstudnitz/scopehint": "dev-master",
+		"avstudnitz/admin-notification-advanced": "dev-master",
+		"fbrnc/aoe_managestores": "dev-master",
+		"tim-reynolds/magento-qconfig": "dev-master"
     },
     "require-dev": {
  		"fbrnc/aoe_profiler": "dev-master",
