--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/.buildpath
-/.project
-/.settings
 /.vagrant
 /.modman/*
 !/.modman/.basedir
@@ -8,7 +5,5 @@
 /vendor/*
 !/vendor/.gitkeep
 /var/*
-!/var/logs
-/var/logs/*
-!/var/logs/.gitkeep
+!/var/.gitkeep
 /deploy/*
