Install Grunt and Bower

--- a/puphpet/config.yaml.template
+++ b/puphpet/config.yaml.template
@@ -212,7 +212,9 @@ ruby:
             version: ''
 nodejs:
     install: '0'
-    npm_packages: {  }
+    npm_packages: 
+        - grunt-cli
+        - bower
 python:
     install: '1'
     packages: {  }
