PhpStorm compatible xdebug configuration, screenshot for Windows firewall settings

--- a/puphpet/config.yaml.template
+++ b/puphpet/config.yaml.template
@@ -196,10 +196,12 @@ xdebug:
     settings:
         xdebug.default_enable: '1'
         xdebug.remote_autostart: '0'
-        xdebug.remote_connect_back: '1'
+        xdebug.remote_connect_back: '0'
+        xdebug.remote_host: '10.0.2.2'
         xdebug.remote_enable: '1'
-        xdebug.remote_handler: dbgp
+        xdebug.remote_handler: 'dbgp'
         xdebug.remote_port: '9000'
+        xdebug.idekey: 'PHPSTORM' #remove if you need dynamic keys (i.e. for multiple sessions)
 xhprof:
     install: '0'
 drush:
