--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
         },
 		{
 			"type": "git",
-			"url": "https://github.com/schmengler/installer.git"
+			"url": "https://github.com/jacquesbh/installer.git"
 		}
 	],
     "extra":{
