--- a/puphpet/config.yaml.template
+++ b/puphpet/config.yaml.template
@@ -1,8 +1,8 @@
 ---
 vagrantfile-local:
     vm:
-        box: puphpet/ubuntu1404-x64
-        box_url: puphpet/ubuntu1404-x64
+        box: puphpet/debian75-x64
+        box_url: puphpet/debian75-x64
         hostname: '{DOMAIN}'
         memory: '1024'
         cpus: '1'
@@ -158,7 +158,7 @@ nginx:
     install: '0'
 php:
     install: '1'
-    version: '55'
+    version: '54'
     composer: '1'
     composer_home: ''
     modules:
