--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
 		"aoepeople/composer-installers": "dev-master",
 		"avstudnitz/scopehint": "dev-master",
 		"avstudnitz/admin-notification-advanced": "dev-master",
-		"tim-reynolds/magento-qconfig": "dev-master"
+		"pulsestorm/system-search-config": "dev-master",
+		"mercator/PulsestormLauncher": "dev-b89227c6fe3dbf1d8abcec8815320f03748d33a1"
     },
     "require-dev": {
+		"firegento/debug": "dev-master",
  		"fbrnc/aoe_profiler": "dev-master",
 		"aoepeople/aoe_templatehints": "dev-master",
 		"aoepeople/envsettingstool": "~1.0",
@@ -47,6 +49,14 @@
         {
             "type": "git",
             "url": "https://github.com/schmengler/FormFiller.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/astorm/SystemConfigurationSearch"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/mercator/PulsestormLauncher"
         },
 		{
 			"type": "git",
