Move template dependend files and directories into template dirs, copy whole "to-copy" directory on initialization

--- a/systemstorage/.gitignore
+++ b/systemstorage/.gitignore
@@ -1,5 +1,8 @@
 # files/db from live
-/live
+/live/*
+!/live/database
+/live/database/*
+!/live/database/.gitkeep
 
 # uncompressed sql files
 *.sql
