Make possible installing Connect modules via Composer, add scripts to /bin to be used on server

--- a/puphpet/templates/modman/to-copy/composer.json
+++ b/puphpet/templates/modman/to-copy/composer.json
@@ -69,7 +69,7 @@
 		}
     },
     "scripts":{
-        "post-install-cmd": "cd /home/vagrant && modman deploy-all --force",
-        "post-update-cmd": "cd /home/vagrant && modman deploy-all --force"
+        "post-install-cmd": "bin/package2modman.sh",
+        "post-update-cmd": "bin/package2modman.sh"
     }
 }
