--- a/puphpet/templates/allinone/config.yaml
+++ b/puphpet/templates/allinone/config.yaml
@@ -126,7 +126,7 @@ apache:
             directories:
                 dynausnskjm4:
                     provider: directory
-                    path: /var/www/{DOMAIN}.local
+                    path: /var/www/{DOMAIN}
                     options:
                         - Indexes
                         - FollowSymlinks
@@ -158,7 +158,7 @@ apache:
             directories:
                 dynausnskjm4:
                     provider: directory
-                    path: /var/www/{DOMAIN}.local
+                    path: /var/www/{DOMAIN}
                     options:
                         - Indexes
                         - FollowSymlinks
