Do not append .local to domain name. Fixes schmengler#9

--- a/puphpet/templates/nginx/config.yaml
+++ b/puphpet/templates/nginx/config.yaml
@@ -148,7 +148,7 @@ apache:
             directories:
                 avd_fqwlfk8hr7fm:
                     provider: directory
-                    path: /var/www/{DOMAIN}.local
+                    path: /var/www/{DOMAIN}
                     options:
                         - Indexes
                         - FollowSymlinks
